Update make targets

--- a/template/{% if github_actions %}.github{% endif %}/workflows/{% if nix %}nix.yml{% endif %}.jinja
+++ b/template/{% if github_actions %}.github{% endif %}/workflows/{% if nix %}nix.yml{% endif %}.jinja
@@ -81,4 +81,6 @@ jobs:
         run: make metrics
       - name: Run test
         run: make test
+      - name: Run coverage
+        run: make coverage
 {%- endraw %}
