--- a/template/Makefile.jinja
+++ b/template/Makefile.jinja
@@ -10,21 +10,73 @@ endif
 SHELL=/usr/bin/env bash -o pipefail -o errexit
 
 TAG ?= $(shell cat TAG)
-{%- if nix %}
-USE_NIX ?= $(shell command -v nix || echo "False")
-{% endif %}
+POETRY_HOME ?= ${HOME}/.local/share/pypoetry
+POETRY_BINARY ?= ${POETRY_HOME}/venv/bin/poetry
+POETRY_VERSION ?= 1.2.0
+
 help:  ## Display this help
 	@awk 'BEGIN {FS = ":.*##"; printf "\nUsage:\n  make \033[36m<target>\033[0m\n"} /^[a-zA-Z0-9_-]+:.*?##/ { printf "  \033[36m%-15s\033[0m %s\n", $$1, $$2 } /^##@/ { printf "\n\033[1m%s\033[0m\n", substr($$0, 5) } ' $(MAKEFILE_LIST)
 
 .PHONY: show-version
 show-version:  ## Display version
 	echo -n "${TAG}"
-{% if nix %}
-ifeq ($(USE_NIX), False)
-include Poetry.mk
-else
-include Nix.mk
-endif
-{% else %}
-include Poetry.mk
+
+.PHONY: build
+build: ## Build {{project_name}} package
+	echo "[build] Build {{project_name}} package."
+	${POETRY_BINARY} build
+
+.PHONY: install
+install:  ## Install {{project_name}} with poetry
+	@build/install.sh
+
+.PHONY: image
+image:  ## Build {{container_image_name}} image
+	@build/image.sh
+
+.PHONY: metrics
+metrics: install ## Run {{project_name}} metrics checks
+	echo "[metrics] Run {{project_name}} PEP 8 checks."
+	${POETRY_BINARY} run flake8 --select=E,W,I --max-line-length 80 --import-order-style pep8 --statistics --count {{package_name}}
+	echo "[metrics] Run {{project_name}} PEP 257 checks."
+	${POETRY_BINARY} run flake8 --select=D --ignore D301 --statistics --count {{package_name}}
+	echo "[metrics] Run {{project_name}} pyflakes checks."
+	${POETRY_BINARY} run flake8 --select=F --statistics --count {{package_name}}
+	echo "[metrics] Run {{project_name}} code complexity checks."
+	${POETRY_BINARY} run flake8 --select=C901 --statistics --count {{package_name}}
+	echo "[metrics] Run {{project_name}} open TODO checks."
+	${POETRY_BINARY} run flake8 --select=T --statistics --count {{package_name}} tests
+	echo "[metrics] Run {{project_name}} black checks."
+	${POETRY_BINARY} run black -l 80 --check {{package_name}}
+
+.PHONY: unit-test
+unit-test: install ## Run {{project_name}} unit tests
+	echo "[unit-test] Run {{project_name}} unit tests."
+	${POETRY_BINARY} run pytest tests/unit
+
+.PHONY: integration-test
+integration-test: install ## Run {{project_name}} integration tests
+	echo "[unit-test] Run {{project_name}} integration tests."
+	${POETRY_BINARY} run pytest tests/integration
+
+.PHONY: coverage
+coverage: install  ## Run {{project_name}} tests coverage
+	echo "[coverage] Run {{project_name}} tests coverage."
+	${POETRY_BINARY} run pytest --cov-config=.coveragerc --cov={{package_name}} --cov-fail-under=90 --cov-report=xml --cov-report=term-missing tests
+
+.PHONY: test
+test: unit-test integration-test  ## Run {{project_name}} tests
+
+.PHONY: docs
+docs: install ## Build {{project_name}} documentation
+	echo "[docs] Build {{project_name}} documentation."
+	${POETRY_BINARY} run sphinx-build docs site
+{% if helm %}
+.PHONY: dev-env
+dev-env: image ## Start a local Kubernetes cluster using minikube and deploy application
+	@build/dev-env.sh
+
+.PHONY: clean
+clean: ## Remove .cache directory and cached minikube
+	minikube delete && rm -rf ~/.cache ~/.minikube
 {% endif %}
