--- a/template/{% if nix %}image.nix{% endif %}.jinja
+++ b/template/{% if nix %}image.nix{% endif %}.jinja
@@ -1,22 +1,21 @@
-{ pkgs ? import <nixpkgs> { overlays = [ (import ./overlay.nix) ]; }
+{ pkgs ? import <nixpkgs> { }
+, {{project_name}}
 , name ? "{{container_image_name}}"
 , tag ? "latest"
 }:
 
-let
-  app = pkgs.callPackage ./default.nix {
-    python = pkgs.python39;
-    poetry2nix = pkgs.poetry2nix;
-  };
-in
 pkgs.dockerTools.buildImage {
   inherit name tag;
 
-  contents = [
-    app
-    pkgs.cacert
-    pkgs.tzdata
-  ];
+  copyToRoot = pkgs.buildEnv {
+    name = "image-root";
+    paths = [
+      {{project_name}}
+      pkgs.cacert
+      pkgs.tzdata
+    ];
+    pathsToLink = [ "/bin" ];
+  };
 
   runAsRoot = ''
     #!${pkgs.runtimeShell}
