--- a/template/{% if nix %}flake.nix{% endif %}.jinja
+++ b/template/{% if nix %}flake.nix{% endif %}.jinja
@@ -44,7 +44,7 @@
         } // pkgs.lib.optionalAttrs pkgs.stdenv.isLinux {
           image = pkgs.callPackage ./image.nix {
             inherit pkgs;
-            {{project_name}} = pkgs.{{project_name}};
+            app = pkgs.{{project_name}};
           };
         };
 
