--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -33,6 +33,7 @@ pytest = "~7.2.0"
 pytest-cov = "~4.0.0"
 pytest-asyncio = "~0.20.3"
 requests = "~2.28.1"
+httpx = "~0.23.1"
 {%- if aiohttp %}
 aioresponses = "~0.7.3"
 {%- endif %}
