Refactor deprecated aioredis-py to redis-py

--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -23,7 +23,7 @@ uvicorn = {extras = ["standard"], version = "~0.20.0"}
 gunicorn = "~20.1.0"
 click = "~8.1.3"
 {%- if redis %}
-aioredis = "~2.0.1"
+redis = "~4.4.0"
 {%- endif %}
 {%- if aiohttp %}
 aiohttp = "~3.8.3"
