Refactor and improve unit tests suite

--- a/template/tests/unit/app/controllers/test_ready.py.jinja
+++ b/template/tests/unit/app/controllers/test_ready.py.jinja
@@ -1,28 +1,44 @@
 from {{package_name}}.config import settings
 
 
-def test_ready(app):
-    settings.USE_REDIS = False
-    response = app.get("/api/ready")
-    assert response.status_code == 200
-    assert response.json() == {"status": "ok"}
+from example.config import settings
 
 
-def test_ready_invalid(app):
-    response = app.get("/api/ready/123")
-    assert response.status_code == 404
+class TestReadyController:
+
+    def test_should_return_ok(self, app_runner):
+        # given
+        settings.USE_REDIS = False
+
+        # when
+        response = app_runner.get("/api/ready")
+
+        # then
+        assert response.status_code == 200
+        assert response.json() == {"status": "ok"}
+
+    def test_should_return_not_found_when_invalid_uri(self, app_runner):
+        # given / when
+        response = app_runner.get("/api/ready/123")
+
+        # then
+        assert response.status_code == 404
 {%- if redis %}
 
+    def test_should_return_bad_gateway_when_redis_unavailable(self, app_runner):
+        # given
+        settings.USE_REDIS = True
 
-def test_ready_invalid_with_redis(app):
-    settings.USE_REDIS = True
-    response = app.get("/api/ready")
-    assert response.status_code == 502
-    assert response.json() == {
-        "error": {
-            "code": 502,
-            "message": "Could not connect to Redis",
-            "status": "BAD_GATEWAY",
+        # when
+        response = app_runner.get("/api/ready")
+
+        # then
+        assert response.status_code == 502
+        assert response.json() == {
+            "error": {
+                "code": 502,
+                "message": "Could not connect to Redis",
+                "status": "BAD_GATEWAY",
+            }
         }
-    }
 {% endif %}
