--- a/template/tests/unit/app/conftest.py.jinja
+++ b/template/tests/unit/app/conftest.py.jinja
@@ -5,7 +5,7 @@ from {{package_name}}.config import settings
 
 
 @pytest.fixture
-def app():
+def app_runner():
     # Overriding to true in order to initialize redis client on FastAPI event
     # startup handler. It'll be needed for unit tests.
     settings.USE_REDIS = True
