--- a/template/Makefile.jinja
+++ b/template/Makefile.jinja
@@ -62,7 +62,7 @@ integration-test: install ## Run {{project_name}} integration tests
 .PHONY: coverage
 coverage: install  ## Run {{project_name}} tests coverage
 	echo "[coverage] Run {{project_name}} tests coverage."
-	${POETRY_BINARY} run pytest --cov-config=.coveragerc --cov={{package_name}} --cov-fail-under=90 --cov-report=xml --cov-report=term-missing tests
+	${POETRY_BINARY} run pytest --cov={{package_name}} --cov-fail-under=90 --cov-report=xml --cov-report=term-missing tests
 
 .PHONY: test
 test: unit-test integration-test  ## Run {{project_name}} tests
