--- a/template/tests/unit/cli/test_serve.py.jinja
+++ b/template/tests/unit/cli/test_serve.py.jinja
@@ -3,7 +3,7 @@ import copy
 from unittest import mock
 
 import pytest
-from {{package_name} import ApplicationLoader
+from {{package_name}} import ApplicationLoader
 from {{package_name}}.cli.serve import serve
 
 fake_pid_file = os.path.join(
