--- a/template/{% if nix %}overlay.nix{% endif %}.jinja
+++ b/template/{% if nix %}overlay.nix{% endif %}.jinja
@@ -21,6 +21,24 @@ final: prev: {
         buildInputs = old.buildInputs or [ ] ++ [ py-final.flit-core ];
       });
 
+      pathspec = py-prev.pathspec.overridePythonAttrs (old: {
+        buildInputs = old.buildInputs or [ ] ++ [ py-final.flit-core ];
+      });
+
+      pydocstyle = py-prev.pydocstyle.overridePythonAttrs (old: {
+        buildInputs = old.buildInputs or [ ] ++ [ py-final.poetry-core py-final.setuptools ];
+      });
+
+      iniconfig = py-prev.iniconfig.overridePythonAttrs (old: {
+        buildInputs = old.buildInputs or [ ] ++ [
+          py-final.hatch-vcs
+          py-final.hatchling
+          py-final.build
+          py-final.setuptools-scm
+          py-final.setuptools
+        ];
+      });
+
     });
 
   });
