Pin nix version in nix-install-action

--- a/template/{% if github_actions %}.github{% endif %}/workflows/{% if nix %}nix.yml{% endif %}.jinja
+++ b/template/{% if github_actions %}.github{% endif %}/workflows/{% if nix %}nix.yml{% endif %}.jinja
@@ -11,6 +11,7 @@ on:
 
 env:
   NIX_CHANNEL: nixpkgs=channel:nixos-22.11
+  NIX_INSTALL_URL: https://releases.nixos.org/nix/nix-2.13.3/install
 
 jobs:
   # This job checks if an identical workflow is being triggered by different
@@ -36,6 +37,7 @@ jobs:
       - uses: cachix/install-nix-action@v18
         with:
           nix_path: ${{ env.NIX_CHANNEL }}
+          install_url: ${{ env.NIX_INSTALL_URL }}
       # Remove bellow step if you do not want to use Cachix - Nix binary cache.
       # For OpenSource projects there is free 5GB of storage.
       # https://www.cachix.org
@@ -69,6 +71,7 @@ jobs:
         with:
           extra_nix_config: "system-features = nixos-test benchmark big-parallel kvm"
           nix_path: ${{ env.NIX_CHANNEL }}
+          install_url: ${{ env.NIX_INSTALL_URL }}
       # Remove bellow step if you do not want to use Cachix - Nix binary cache.
       # For OpenSource projects there is free 5GB of storage.
       # https://www.cachix.org
