--- a/template/Makefile.jinja
+++ b/template/Makefile.jinja
@@ -71,6 +71,11 @@ test: unit-test integration-test  ## Run {{project_name}} tests
 docs: install ## Build {{project_name}} documentation
 	echo "[docs] Build {{project_name}} documentation."
 	${POETRY_BINARY} run sphinx-build docs site
+
+.PHONY: mypy
+mypy: install  ## Run {{project_name}} mypy checks
+	echo "[mypy] Run {{project_name}} mypy checks."
+	${POETRY_BINARY} run mypy {{package_name}}
 {% if helm %}
 .PHONY: dev-env
 dev-env: image ## Start a local Kubernetes cluster using minikube and deploy application
