--- a/template/{% if nix %}flake.nix{% endif %}.jinja
+++ b/template/{% if nix %}flake.nix{% endif %}.jinja
@@ -117,6 +117,17 @@
               pytest --cov={{package_name}} --cov-fail-under=90 --cov-report=xml --cov-report=term-missing tests
             '');
           };
+          mypy = {
+            type = "app";
+            program = toString (pkgs.writeScript "mypy" ''
+              export PATH="${pkgs.lib.makeBinPath [
+                  pkgs.{{project_name}}-dev
+                  pkgs.git
+              ]}"
+              echo "[nix][mypy] Run {{project_name}} mypy checks."
+              mypy {{package_name}}
+            '');
+          };
           test = {
             type = "app";
             program = toString (pkgs.writeScript "test" ''
