--- a/template/{% if github_actions %}.github{% endif %}/workflows/{% if nix %}nix.yml{% endif %}.jinja
+++ b/template/{% if github_actions %}.github{% endif %}/workflows/{% if nix %}nix.yml{% endif %}.jinja
@@ -53,6 +53,8 @@ jobs:
         run: nix flake check
       - name: Run metrics checks
         run: nix run .#metrics
+      - name: Run mypy checks
+        run: nix run .#mypy
       - name: Run tests
         run: nix run .#test
   nix-build:
