--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -70,6 +70,9 @@ exclude_lines = [
 ]
 
 [tool.mypy]
+exclude = [
+    "config/gunicorn.py"
+]
 python_version = '3.10'
 show_error_codes = true
 follow_imports = 'silent'
@@ -89,5 +92,7 @@ implicit_optional = true
 
 [[tool.mypy.overrides]]
 module = [
+    "gunicorn.*",
+    "redis.*",
 ]
 ignore_missing_imports = true
