--- a/template/{{package_name}}/app/controllers/ready.py.jinja
+++ b/template/{{package_name}}/app/controllers/ready.py.jinja
@@ -26,7 +26,7 @@ log = logging.getLogger(__name__)
     responses={502: {"model": ErrorResponse}},
     {%- endif %}
 )
-async def readiness_check():
+async def readiness_check() -> ReadyResponse:
     """Run basic application health check.
 
     If the application is up and running then this endpoint will return simple
