--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -47,6 +47,7 @@ black = "~23.1.0"
 Sphinx = "~5.3.0"
 Pallets-Sphinx-Themes = "~2.0.2"
 myst-parser = "~0.19.0"
+fastapi-mvc = "^0.26.0"
 
 [tool.poetry.scripts]
 {{script_name}} = '{{package_name}}.cli:cli'
