--- a/template/{% if nix %}flake.nix{% endif %}.jinja
+++ b/template/{% if nix %}flake.nix{% endif %}.jinja
@@ -1,6 +1,14 @@
 {
   description = "{{project_name}} flake";
-  nixConfig.bash-prompt = ''\n\[\033[1;32m\][nix-develop:\w]\$\[\033[0m\] '';
+  nixConfig = {
+    bash-prompt = ''\n\[\033[1;32m\][nix-develop:\w]\$\[\033[0m\] '';
+    extra-trusted-public-keys = [
+      "fastapi-mvc.cachix.org-1:knQ8Qo41bnhBmOB6Sp0UH10EV76AXW5o69SbAS668Fg="
+    ];
+    extra-substituters = [
+      "https://fastapi-mvc.cachix.org"
+    ];
+  };
 
   inputs = {
     nixpkgs.url = "github:NixOS/nixpkgs/nixos-22.11";
@@ -11,50 +19,69 @@
     };
   };
 
-  outputs = { self, nixpkgs, flake-utils, poetry2nix }:
-    {
-      overlays.default = nixpkgs.lib.composeManyExtensions [
-        poetry2nix.overlay
-        (import ./overlay.nix)
-        (final: prev: {
-          {{project_name}} = prev.callPackage ./default.nix {
-            python = final.python3;
-            poetry2nix = final.poetry2nix;
-          };
-          {{project_name}}-dev = prev.callPackage ./editable.nix {
-            python = final.python3;
-            poetry2nix = final.poetry2nix;
-          };
-        })
-      ];
-    } // (flake-utils.lib.eachDefaultSystem (system:
-      let
-        pkgs = import nixpkgs {
-          inherit system;
-          overlays = [ self.overlays.default ];
+  outputs = { self, nixpkgs, flake-parts, poetry2nix }@inputs:
+    let
+      mkApp =
+        { drv
+        , name ? drv.pname or drv.name
+        , exePath ? drv.passthru.exePath or "/bin/${name}"
+        }:
+        {
+          type = "app";
+          program = "${drv}${exePath}";
         };
-      in
-      rec {
-        packages = {
-          default = pkgs.{{project_name}};
-          {{project_name}}-py38 = pkgs.{{project_name}}.override { python = pkgs.python38; };
-          {{project_name}}-py39 = pkgs.{{project_name}}.override { python = pkgs.python39; };
-          {{project_name}}-py310 = pkgs.{{project_name}}.override { python = pkgs.python310; };
-          poetryEnv = pkgs.{{project_name}}-dev;
-        } // pkgs.lib.optionalAttrs pkgs.stdenv.isLinux {
-          image = pkgs.callPackage ./image.nix {
-            inherit pkgs;
-            app = pkgs.{{project_name}};
+    in
+    flake-parts.lib.mkFlake { inherit inputs; } {
+      imports = [
+        inputs.flake-parts.flakeModules.easyOverlay
+      ];
+      systems = [ "x86_64-linux" "aarch64-linux" "x86_64-darwin" "aarch64-darwin" ];
+      perSystem = { config, self', inputs', pkgs, system, ... }: {
+        # Add poetry2nix overrides to nixpkgs
+        _module.args.pkgs = import nixpkgs {
+          inherit system;
+          overlays = [ self.overlays.poetry2nix ];
+        };
+
+        packages =
+          let
+            mkProject =
+              { python ? pkgs.python3
+              }:
+              pkgs.callPackage ./default.nix {
+                inherit python;
+                poetry2nix = pkgs.poetry2nix;
+                git = pkgs.git;
+              };
+          in
+          {
+            default = mkProject { };
+            {{project_name}}-py38 = mkProject { python = pkgs.python38; };
+            {{project_name}}-py39 = mkProject { python = pkgs.python39; };
+            {{project_name}}-py310 = mkProject { python = pkgs.python310; };
+            {{project_name}}-py311 = mkProject { python = pkgs.python311; };
+            {{project_name}}-dev = pkgs.callPackage ./editable.nix {
+              poetry2nix = pkgs.poetry2nix;
+              python = pkgs.python3;
+            };
+          } // pkgs.lib.optionalAttrs pkgs.stdenv.isLinux {
+            image = pkgs.callPackage ./image.nix {
+              inherit pkgs;
+              app = config.packages.default;
+            };
           };
+
+        overlayAttrs = {
+          inherit (config.packages) default;
         };
 
         apps = {
-          {{project_name}} = flake-utils.lib.mkApp { drv = pkgs.{{project_name}}; };
+          {{project_name}} = flake-utils.lib.mkApp { drv = config.packages; };
           metrics = {
             type = "app";
             program = toString (pkgs.writeScript "metrics" ''
               export PATH="${pkgs.lib.makeBinPath [
-                  pkgs.{{project_name}}-dev
+                  config.packages.{{project_name}}-dev
                   pkgs.git
               ]}"
               echo "[nix][metrics] Run {{project_name}} PEP 8 checks."
@@ -75,7 +102,7 @@
             type = "app";
             program = toString (pkgs.writeScript "docs" ''
               export PATH="${pkgs.lib.makeBinPath [
-                  pkgs.{{project_name}}-dev
+                  config.packages.{{project_name}}-dev
                   pkgs.git
               ]}"
               echo "[nix][docs] Build {{project_name}} documentation."
@@ -86,7 +113,7 @@
             type = "app";
             program = toString (pkgs.writeScript "unit-test" ''
               export PATH="${pkgs.lib.makeBinPath [
-                  pkgs.{{project_name}}-dev
+                  config.packages.{{project_name}}-dev
                   pkgs.git
               ]}"
               echo "[nix][unit-test] Run {{project_name}} unit tests."
@@ -97,7 +124,7 @@
             type = "app";
             program = toString (pkgs.writeScript "integration-test" ''
               export PATH="${pkgs.lib.makeBinPath [
-                  pkgs.{{project_name}}-dev
+                  config.packages.{{project_name}}-dev
                   pkgs.git
                   pkgs.coreutils
               ]}"
@@ -109,7 +136,7 @@
             type = "app";
             program = toString (pkgs.writeScript "coverage" ''
               export PATH="${pkgs.lib.makeBinPath [
-                  pkgs.{{project_name}}-dev
+                  config.packages.{{project_name}}-dev
                   pkgs.git
                   pkgs.coreutils
               ]}"
@@ -121,7 +148,7 @@
             type = "app";
             program = toString (pkgs.writeScript "mypy" ''
               export PATH="${pkgs.lib.makeBinPath [
-                  pkgs.{{project_name}}-dev
+                  config.packages.{{project_name}}-dev
                   pkgs.git
               ]}"
               echo "[nix][mypy] Run {{project_name}} mypy checks."
@@ -138,7 +165,7 @@
         };
 
         devShells = {
-          default = pkgs.{{project_name}}-dev.env.overrideAttrs (oldAttrs: {
+          default = config.packages.{{project_name}}-dev.env.overrideAttrs (oldAttrs: {
             buildInputs = [
               pkgs.git
               pkgs.poetry
@@ -146,5 +173,12 @@
           });
           poetry = import ./shell.nix { inherit pkgs; };
         };
-      }));
+      };
+      flake = {
+        overlays.poetry2nix = nixpkgs.lib.composeManyExtensions [
+          poetry2nix.overlay
+          (import ./overlay.nix)
+        ];
+      };
+    };
 }
